# dockerMultiService

./: .gitignore  README.md  env.env
docker_bridge_network/: container copy code.txt
docker_bridge_network/c#_app/: c#_app.csproj  c#_app.sln
docker_bridge_network/cpp_app/: Dockerfile
docker_bridge_network/csharp_app/: Program.cs
docker_bridge_network/docker_linux_container/: .env  Readme.txt
docker_bridge_network/docker_linux_container/cpp_app/: Dockerfile  main.cpp
docker_bridge_network/docker_linux_container/csharp_app/: Dockerfile  Program.cs  csharp_app.sln
docker_bridge_network/docker_linux_container_boost/: docker-compose.yml
docker_bridge_network/docker_linux_container_boost/cpp_app/: CMakeLists.txt  main.cpp  testWindows.cpp
docker_bridge_network/docker_windows_container/: docker-compose.yml
docker_bridge_network/docker_windows_container/cpp_app/: Dockerfile  main.cpp  readme.txt
docker_bridge_network/docker_windows_container_boost/: .env  Readme.txt
docker_bridge_network/docker_windows_container_boost/cpp_app/: CMakeLists.txt  Dockerfile  main.cpp
docker_bridge_network/docker_windows_container_boost/csharp_app/: Dockerfile
docker_host_test_code/: docker-compose.yml
docker_host_test_code/c#_app/: Dockerfile  Program.cs
docker_host_test_code/cpp_app/: main.cpp
projects/: docker-compose.yml
projects/c#_app/: Dockerfile  Program.cs  c#_app.csproj  c#_app.sln
projects/cpp_app/: Dockerfile  main.cpp
projects/python_app/: main.py
python_app/: main.py
